# browser-use-script

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  cli.py  install.py  main.py  pyproject.toml  requirements.txt  simple_example.py  start_app.ps1  task_processor.py  tasks.json  test_browser_use.py
